--- a/HuguesLejeune/project.html
+++ b/HuguesLejeune/project.html
@@ -2,6 +2,7 @@
     <head>
         <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.6.1/dist/aframe-extras.min.js"></script>
+        <script src="https://unpkg.com/aframe-event-set-component@5/dist/aframe-event-set-component.min.js"></script>
 
         <script src="components/a-cursor-navigation.js"></script>
     </head>
@@ -52,6 +53,23 @@
             </a-entity>
 
             <a-entity gltf-model="#brown-bear" position="2.5 0 -2.8" scale="0.02 0.02 0.02" animation-mixer="clampWhenFinished: true"></a-entity>
+
+            <a-sphere
+                position="2 1.4 -3"
+                radius="0.05"
+                color="#51cc0f"
+                event-set__enter="_event: mouseenter; scale: 10 10 10"
+                event-set__leave="_event: mouseleave; scale: 1 1 1">
+            </a-sphere>
+            <a-sphere position="2 1.4 -2.8" radius="0.05" color="#51cc0f"></a-sphere>
+            <a-sphere position="2 1.4 -2.6" radius="0.05" color="#51cc0f"></a-sphere>
+            <a-sphere position="2 1.4 -2.4" radius="0.05" color="#51cc0f"></a-sphere>
+            <a-sphere position="2 1.4 -2.2" radius="0.05" color="#51cc0f"></a-sphere>
+
+            <a-entity position="0 1.6 -5">
+                <a-plane width="3" height="2" color="#FFF"></a-plane>
+                <a-text align="center" color="#000" value="Lorem ipsum"></a-text>
+            </a-entity>
 
             <a-entity gltf-model="#pine-tree" position="1.5 0 0" scale="3 3 3"></a-entity>
             <a-entity gltf-model="#pine-tree" position="3.7 0 -1.3" scale="1.8 1.8 1.8"></a-entity>
