Hugues: change cursor size and distance from camera to avoid overlapping with scene elements

--- a/HuguesLejeune/project.html
+++ b/HuguesLejeune/project.html
@@ -27,7 +27,7 @@
                 movement-controls="speed: 1.01; enabled:false"
                 a-cursor-teleport="cameraRig: #cameraRig; cameraHead: #head">
                 <a-entity id="head" position="0 1.6 0" camera="near: 0.1" look-controls="reverseMouseDrag: false">
-                <a-cursor color="white"></a-cursor>
+                <a-cursor color="white" position="0 0 -0.1" scale="0.1 0.1 0.1"></a-cursor>
                 </a-entity>
                 <a-entity id="leftHand" hand-tracking-grab-controls="hand: left;"></a-entity>
                 <a-entity id="rightHand" hand-tracking-grab-controls="hand: right;"></a-entity>
