--- a/MaryiaBrauer/crisiskit.html
+++ b/MaryiaBrauer/crisiskit.html
@@ -112,19 +112,19 @@
 
       <!--Grabbing objects-->
       <a-box id="cube1" grabbable="hoverEnabled: true; hoverColor: #red;" position="-0.85 1.05 0.6" color="yellow" scale="0.05 0.05 0.05" rotation="0 0 0" obb-collider="objects: #bag" shake-on-bag-touch></a-box>
-      <!-- <a-box id="cube2" grabbable=" hoverEnabled: true; hoverColor: #red;" position="-0.5 1.05 0" color="blue" scale="0.05 0.05 0.05" rotation="0 0 0" obb-collider="objects: #bag" hide-on-bag-touch></a-box> -->
+      <a-box id="cube2" grabbable=" hoverEnabled: true; hoverColor: #red;" position="-0.5 1.05 0" color="blue" scale="0.05 0.05 0.05" rotation="0 0 0" obb-collider="objects: #bag" hide-on-bag-touch></a-box>
       <a-box id="cube3" grabbable=" hoverEnabled: true; hoverColor: #red;" position="-0.7 1.05 0.2" color="black" scale="0.05 0.05 0.05" rotation="0 0 0" obb-collider="objects: #bag" hide-on-bag-touch></a-box>
       <a-box id="cube4" grabbable=" hoverEnabled: true; hoverColor: #red;" position="-0.6 1.05 -0.6" color="pink" scale="0.05 0.05 0.05" rotation="0 0 0" obb-collider="objects: #bag" shake-on-bag-touch></a-box>
       <a-box id="cube5" grabbable=" hoverEnabled: true; hoverColor: #red;" position="-0.45 1.05 -0.5" color="green" scale="0.05 0.05 0.05" rotation="0 0 0" obb-collider="objects: #bag" hide-on-bag-touch></a-box>
 
       <a-box id="bag" position="-0.51 1.1 0.6" color="grey" scale="0.2 0.2 0.2" obb-collider="centerModel: true"></a-box>
 
-      <a-assets>
+      <!-- <a-assets>
         <a-asset-item id="water" src="./src/water_bottle/water_bottle.obj"></a-asset-item>
         <a-asset-item id="water-mtl" src="./src/water_bottle/water_bottle.mtl"></a-asset-item>
-      </a-assets>
+      </a-assets> -->
 
-      <a-entity obj-model="obj: #water; mtl: #water-mtl" position="-0.5 1.05 0"></a-entity>
+      <!-- <a-entity obj-model="obj: #water; mtl: #water-mtl" position="-0.5 1.05 0"></a-entity> -->
 
       <a-entity id="cube-ui" position="0 1.8 -1.2">
         <a-plane width="0.6" height="0.5" color="#222" opacity="0.8"></a-plane>
